# lai

./: .gitignore  LICENSE  README.md  meson.build
.github/workflows/: clang-format-check.yml  main.yml
core/: aml_opcodes.h  error.c  eval.c  eval.h  exec-operand.c  exec.c  exec2.c  exec_impl.h  libc.c  libc.h  ns.c  ns_impl.h  object.c  opregion.c  opregion.h  os_methods.c  util-hash.h  util-list.h  util-macros.h  variable.c  vsnprintf.c
drivers/: ec.c  timer.c
helpers/: pc-bios.c  pci.c  pciroute.c  pm.c  resource.c  sci.c  sleep.c
include/acpispec/: hw.h  resources.h  tables.h
include/lai/: core.h  error.h  host.h  internal-exec.h  internal-ns.h  internal-util.h
include/lai/drivers/: ec.h  timer.h
include/lai/helpers/: pc-bios.h  pci.h  pciroute.h  pm.h  resource.h  sci.h  sleep.h
src/: aml_opcodes.h  eval.c  eval.h  exec.c  exec2.c  exec_impl.h  execns.c  lai.h  libc.c  libc.h  ns.c  ns_impl.h  opregion.c  opregion.h  os_methods.c  pciroute.c  resource.c  sci.c  sleep.c  util-hash.h  util-macros.h  vsnprintf.c
src/windozz/: lai_system.h  system.c
